syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "CategoryProto";

service CategoryService {
  rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse);
}

message GetCategoriesRequest {
  int64 telegramId = 1;
}

message Category {
  string uuid = 1;
  string title = 2;
  string emoji = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message GetCategoriesResponse {
  bool status = 1;
  repeated Category categories = 2;
}